test/errors/dict/update_type_error.np
d = {1: 2}
d.update({"one": "two"})
